--- a/.github/workflows/snyk-container-analysis.yml
+++ b/.github/workflows/snyk-container-analysis.yml
@@ -17,13 +17,17 @@ on:
   schedule:
     - cron: '22 11 * * 3'
 
+env:
+  # github.repository as <account>/<repo>
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   snyk:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Build a Docker image
-      run: docker build -t your/image-to-test .
+      run: docker build -t ${{ env.IMAGE_NAME }} .
     - name: Run Snyk to check Docker image for vulnerabilities
       # Snyk can be used to break the build when it detects vulnerabilities.
       # In this case we want to upload the issues to GitHub Code Scanning
@@ -35,7 +39,7 @@ jobs:
         # or you can signup for free at https://snyk.io/login
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
-        image: your/image-to-test
+        image: ${{ env.IMAGE_NAME }}
         args: --file=Dockerfile
     - name: Upload result to GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v1
